[gd_scene format=3 uid="uid://dw1svydgpqq1h"]

[ext_resource type="Texture2D" uid="uid://ci3jtyy3imxrk" path="res://assets/sprites/cozy-library.webp" id="1_con2f"]
[ext_resource type="Script" uid="uid://cex0paf7xckbs" path="res://scripts/menu.gd" id="1_wwsa2"]
[ext_resource type="FontFile" uid="uid://bu5qd03fmychg" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_con2f"]
[ext_resource type="Texture2D" uid="uid://ulxnkmyy8moo" path="res://assets/sprites/UiCozyFree.png" id="2_vjb58"]
[ext_resource type="FontFile" uid="uid://y7ygfgkw7v2t" path="res://assets/fonts/yoster-island/yoster.ttf" id="4_mhnvy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vjb58"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yqeox"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yqeox"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4ytvr"]

[node name="Menu" type="Control" unique_id=1539899677]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wwsa2")

[node name="CozyLibrary" type="Sprite2D" parent="." unique_id=914821912]
modulate = Color(0.68514574, 0.6851458, 0.6851457, 1)
position = Vector2(608, 322)
scale = Vector2(1.8609375, 1.8609376)
texture = ExtResource("1_con2f")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1956871186]
position = Vector2(263.69727, 341.24997)
scale = Vector2(5.1194777, 6.29878)
texture = ExtResource("2_vjb58")
region_enabled = true
region_rect = Rect2(7.9823685, 166.63138, 87.788055, 82.85878)

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=349707831]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 98.0
offset_top = -80.0
offset_right = 418.0
offset_bottom = 234.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=354562335]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer" unique_id=2063512658]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.94887334, 0.9632917, 0.8407345, 1)
theme_override_colors/font_disabled_color = Color(0.50534403, 0.5053441, 0.50534403, 1)
theme_override_fonts/font = ExtResource("2_con2f")
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxEmpty_vjb58")
theme_override_styles/hover = SubResource("StyleBoxTexture_yqeox")
text = "Jogar"

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer" unique_id=2106600690]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.94887334, 0.9632917, 0.8407345, 1)
theme_override_colors/font_disabled_color = Color(0.50534403, 0.5053441, 0.50534403, 1)
theme_override_fonts/font = ExtResource("2_con2f")
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxEmpty_vjb58")
theme_override_styles/hover = SubResource("StyleBoxTexture_yqeox")
text = "Cr√©ditos"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer" unique_id=292230509]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.94887334, 0.9632917, 0.8407345, 1)
theme_override_colors/font_disabled_color = Color(0.50534403, 0.5053441, 0.50534403, 1)
theme_override_fonts/font = ExtResource("2_con2f")
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxEmpty_vjb58")
theme_override_styles/hover = SubResource("StyleBoxTexture_yqeox")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_yqeox")
disabled = true
text = "Ajustes"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer" unique_id=1793206362]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.94887334, 0.9632917, 0.8407345, 1)
theme_override_colors/font_disabled_color = Color(0.50534403, 0.5053441, 0.50534403, 1)
theme_override_fonts/font = ExtResource("2_con2f")
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxEmpty_vjb58")
theme_override_styles/hover = SubResource("StyleBoxTexture_yqeox")
text = "Sair"

[node name="Label" type="Label" parent="." unique_id=1792016961]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 83.69731
offset_top = -157.75003
offset_right = 440.69733
offset_bottom = -72.75003
grow_vertical = 2
theme_override_colors/font_color = Color(0.019607844, 0.32156864, 0.18039216, 1)
theme_override_fonts/font = ExtResource("4_mhnvy")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_4ytvr")
text = "AstroFrog"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
